[package]
name = "sys_traits"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/dsherret/sys_traits"
description = "Trait per function for system related functionality."

[package.metadata.docs.rs]
all-features = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.216", features = ["derive"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "0.2" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[dev-dependencies]
