[package]
name = "sys_traits"
version = "0.1.23"
edition = "2021"
license = "MIT"
repository = "https://github.com/dsherret/sys_traits"
description = "Trait per function for system related functionality."

[package.metadata.docs.rs]
all-features = true

[workspace]
members = [
  "macros",
  "tests/wasm_test",
]

[features]
default = []
libc = ["dep:libc"]
memory = ["dep:parking_lot"]
getrandom = ["dep:getrandom"]
filetime = ["dep:filetime"]
real = []
serde = ["dep:serde"]
serde_json = ["dep:serde_json", "serde"]
strip_unc = []
winapi = ["dep:junction", "dep:windows-sys"]
wasm = ["real", "dep:js-sys", "dep:wasm-bindgen"]

[dependencies]
filetime = { version = "0.2", optional = true }
parking_lot = { version = "0.12", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
sys_traits_macros = { version = "0.1", path = "./macros" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "0.2", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
junction = { version = "1.2.0", optional = true }
windows-sys = { version = "0.59", optional = true, features = ["Win32_Globalization", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_System_IO", "Win32_UI_Shell", "Win32_UI_Shell_Common"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3.14"
